--- a/PQHP Website Code/css/publications+events.css
+++ b/PQHP Website Code/css/publications+events.css
@@ -37,6 +37,7 @@ button {
     background-color: #AC92A6;
     border: #AC92A6;
     color: white;
+    margin: 2%;
 }
 
 /* below are the styles for the contents of publications page */
@@ -127,7 +128,6 @@ button {
 .dropbtn {
     background-color: #AC92A6;
     color: white;
-    padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
